Fix Admin ui/student/application and added view oofer in student